# internal/model/user.go
@@ -8,7 +8,7 @@ type User struct {
 	Name        string `json:"name"`
 	Username    string `json:"username"`
 	Email       string `json:"email"`
-	Password    string `json:"password"`
+	Password    string `json:"-"`
 	PhoneNumber string `json:"phone_number"`
 }
 
@@ -19,4 +19,17 @@ type UserRegisterRequest struct {
 	Email       string `json:"email"`
 	Password    string `json:"password"`
 	PhoneNumber string `json:"phone_number"`
+}
+
+// UserLoginRequest data structure
+type UserLoginRequest struct {
+	UserIdentity string `json:"user_identity"`
+	Password     string `json:"password"`
+}
+
+// UserLoginResponse data structure
+type UserLoginResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+	Data         User   `json:"data"`
 }
